--- a/eu.dariolucia.reatmetric.core/Documentation.adoc
+++ b/eu.dariolucia.reatmetric.core/Documentation.adoc
@@ -17,6 +17,8 @@ managing their acknowledgements) and raw data.
 implementation provides the generic extraction of information from raw data objects handled by the driver.
 * It provides the specification and an implementation of the IServiceCoreContext interface, which is the context object
 provided to the drivers upon system initialisation. From such object, a driver can access all system core functions.
+* It provides an implementation of all the processing model service factories, to access live and historical data generated
+by the processing model.
 
 When the IReatmetricSystem implementation is instantiated by the IReatmetricRegister implementation, the system is
 initialised in the following steps:
