--- a/docs/ReatMetric Design Concepts.adoc
+++ b/docs/ReatMetric Design Concepts.adoc
@@ -292,9 +292,7 @@ include::../eu.dariolucia.reatmetric.remoting.connector/Documentation.adoc[]
 
 == Driver Modules
 === Automation
-==== Overview
-==== Configuration
-To be written
+include::../eu.dariolucia.reatmetric.driver.automation.base/Documentation.adoc[]
 
 === HTTP Server
 ==== Overview
@@ -302,9 +300,7 @@ To be written
 To be written
 
 === Remote
-==== Overview
-==== Configuration
-To be written
+include::../eu.dariolucia.reatmetric.driver.remote/Documentation.adoc[]
 
 === Socket
 ==== Overview
@@ -317,9 +313,7 @@ To be written
 To be written
 
 === Serial
-==== Overview
-==== Configuration
-To be written
+include::../eu.dariolucia.reatmetric.driver.serial/Documentation.adoc[]
 
 == User Interface
 ==== Overview
